Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #1f2937;
-    height: 530px;
+    min-height: 530px;
     padding: 0 400px 0 400px;
     
     
@@ -49,7 +49,7 @@ ul {
 
 .hero-content {
     display: flex;
-    height: 250px;
+    min-height: 250px;
     gap: 50px;
     padding: 0 0 0 0;
     
@@ -90,7 +90,7 @@ ul {
 .second {
     display: flex;
     flex-direction: column;
-    height: 480px;
+    min-height: 480px;
     padding: 0 400px 0 400px;
 }
 
@@ -138,7 +138,7 @@ ul {
 .third{
     display: flex;
     flex-direction: column;
-    height: 430px;
+    min-height: 430px;
     padding: 0 400px 0 400px;
     background-color: #e5e7eb;
     align-items: center;
